// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Click primary and subdefinitions to edit 1`] = `
<div
  className="container report-module-editor"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="col-md-3"
    >
      <label>
        Report Type
      </label>
      <select
        className="form-control mb-3"
        onChange={[Function]}
        value="GENERAL"
      >
        <option
          key="GENERAL"
          value="GENERAL"
        >
          General
        </option>
        <option
          key="COVERAGE"
          value="COVERAGE"
        >
          Coverage
        </option>
        <option
          key="FORM477"
          value="FORM477"
        >
          Form477
        </option>
        <option
          key="PARAM_QUERY"
          value="PARAM_QUERY"
        >
          Param Query
        </option>
      </select>
      <label>
        Report Definitions
      </label>
      <ul
        className="nav nav-pills mb-2 definitions-list"
      >
        <li
          className="nav-item"
          key="-1"
        >
          <a
            className="nav-link active"
            id="lnkEditPrimaryDefinition"
            onClick={[Function]}
          >
            Primary Definition
          </a>
        </li>
        <li
          className="nav-item outside-btn"
          key="0"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition0"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
        <li
          className="nav-item outside-btn"
          key="1"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition1"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
      </ul>
      <button
        className="btn btn-light btn-sm float-right"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
         Add Subdefinition
      </button>
    </div>
    <div
      className="col-md-9 d-flex flex-column"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="flex-grow-1"
      >
        <ReduxForm
          destroyOnUnmount={true}
          enableReinitialize={true}
          forceUnregisterOnUnmount={false}
          form="reportDefinitionEditor"
          getFormState={[Function]}
          initialValues={
            Object {
              "displayName": "plan_report",
              "name": "plan_report",
              "query": "<kml
    xmlns=\\"http://www.opengis.net/kml/2.2\\"
    xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\">
    <Document>
        <name>plan-\${planId}.kml</name>
        <visibility>0</visibility>
        <Style id=\\"style_construction_estimated\\">
            <LineStyle>
                <color>ff0000ff</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_ariel_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_buried_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_underground_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_obstacle_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_planned_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_undersea_estimated\\">
            <LineStyle>
                <color>ffb40014</color>
                <width>4</width>
            </LineStyle>
        </Style>

        <Style id=\\"equip_central_office\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_splice_point\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/blue-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_hub\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/itblu-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_bulk_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/purple-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_cell_5g\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_junction_splitter\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_dslam\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/ylw-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_loop_extender\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_network_anchor\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Folder>
            <name>Fiber</name>
            <visibility>0</visibility>
            <Folder>
                <name>Planned Fiber</name>
                <visibility>0</visibility>
                <#list planned_fibers as fiber>
                    <Placemark>
                        <name>\${fiber.type_name}</name>
                        <visibility>0</visibility>
                        <styleUrl>#fiber_\${fiber.type_code}</styleUrl>
                        \${fiber.kml_element}
                    </Placemark>
                </#list>
            </Folder>
         </Folder>   
        <Folder>
            <name>Equipment</name>
            <visibility>0</visibility>
            <Folder>
                <#list planned_equipment as equipment>
                    <Placemark>
                        <name>\${equipment.object_id}</name>
                        <visibility>0</visibility>
                        <styleUrl>#equip_\${equipment.equipment_type}</styleUrl>
                        \${equipment.kml_element}
                    </Placemark>
                </#list>
           </Folder>
        </Folder>
    </Document>

</kml>",
              "queryType": "KML_REPORT",
            }
          }
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldError={[Function]}
          shouldValidate={[Function]}
          shouldWarn={[Function]}
          submitAsSideEffect={false}
          touchOnBlur={true}
          touchOnChange={false}
          updateUnregisteredFields={false}
        />
      </div>
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          className="btn btn-light"
          id="btnSaveCurrentDefinition"
          onClick={[Function]}
        >
          Check Syntax
        </button>
        <button
          className="btn btn-primary"
          id="btnSaveReportToServer"
          onClick={[Function]}
        >
          Save Definition
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Click primary and subdefinitions to edit 2`] = `
<div
  className="container report-module-editor"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="col-md-3"
    >
      <label>
        Report Type
      </label>
      <select
        className="form-control mb-3"
        onChange={[Function]}
        value="GENERAL"
      >
        <option
          key="GENERAL"
          value="GENERAL"
        >
          General
        </option>
        <option
          key="COVERAGE"
          value="COVERAGE"
        >
          Coverage
        </option>
        <option
          key="FORM477"
          value="FORM477"
        >
          Form477
        </option>
        <option
          key="PARAM_QUERY"
          value="PARAM_QUERY"
        >
          Param Query
        </option>
      </select>
      <label>
        Report Definitions
      </label>
      <ul
        className="nav nav-pills mb-2 definitions-list"
      >
        <li
          className="nav-item"
          key="-1"
        >
          <a
            className="nav-link "
            id="lnkEditPrimaryDefinition"
            onClick={[Function]}
          >
            Primary Definition
          </a>
        </li>
        <li
          className="nav-item outside-btn"
          key="0"
        >
          <a
            className="nav-link subdefinition-link active"
            id="lnkEditSubDefinition0"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
        <li
          className="nav-item outside-btn"
          key="1"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition1"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
      </ul>
      <button
        className="btn btn-light btn-sm float-right"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
         Add Subdefinition
      </button>
    </div>
    <div
      className="col-md-9 d-flex flex-column"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="flex-grow-1"
      >
        <ReduxForm
          destroyOnUnmount={true}
          enableReinitialize={true}
          forceUnregisterOnUnmount={false}
          form="reportDefinitionEditor"
          getFormState={[Function]}
          initialValues={
            Object {
              "displayName": "Planned Fiber Elements",
              "name": "planned_fibers",
              "query": "SELECT
    c.construction_type,
    ct.name as type_code,
    ct.description as type_name,
    s.length_meters AS length_meters,
    ST_AsKml(ST_Line_Substring(ST_LineMerge(s.geom),
        LEAST(ST_LineLocatePoint(ST_LineMerge(s.geom),c.point1),
ST_LineLocatePoint(ST_LineMerge(s.geom),c.point2)),
        GREATEST(ST_LineLocatePoint(ST_LineMerge(s.geom),c.point1),
ST_LineLocatePoint(ST_LineMerge(s.geom),c.point2))
    )) AS kml_element
FROM client.versioned_plan_subnet vpn
JOIN client.subnet_link s
    ON vpn.id = s.plan_subnet_id
    AND s.length_meters > 0
JOIN client.plan_conduit c 
    ON s.id = c.subnet_link_id
JOIN client.cable_construction_type ct 
    ON c.construction_type = ct.id
WHERE root_plan_id = \${planId}
AND NOT(is_deleted)",
              "queryType": "SQL_REPORT",
            }
          }
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldError={[Function]}
          shouldValidate={[Function]}
          shouldWarn={[Function]}
          submitAsSideEffect={false}
          touchOnBlur={true}
          touchOnChange={false}
          updateUnregisteredFields={false}
        />
      </div>
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          className="btn btn-light"
          id="btnSaveCurrentDefinition"
          onClick={[Function]}
        >
          Check Syntax
        </button>
        <button
          className="btn btn-primary"
          id="btnSaveReportToServer"
          onClick={[Function]}
        >
          Save Definition
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Click primary and subdefinitions to edit 3`] = `
<div
  className="container report-module-editor"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="col-md-3"
    >
      <label>
        Report Type
      </label>
      <select
        className="form-control mb-3"
        onChange={[Function]}
        value="GENERAL"
      >
        <option
          key="GENERAL"
          value="GENERAL"
        >
          General
        </option>
        <option
          key="COVERAGE"
          value="COVERAGE"
        >
          Coverage
        </option>
        <option
          key="FORM477"
          value="FORM477"
        >
          Form477
        </option>
        <option
          key="PARAM_QUERY"
          value="PARAM_QUERY"
        >
          Param Query
        </option>
      </select>
      <label>
        Report Definitions
      </label>
      <ul
        className="nav nav-pills mb-2 definitions-list"
      >
        <li
          className="nav-item"
          key="-1"
        >
          <a
            className="nav-link "
            id="lnkEditPrimaryDefinition"
            onClick={[Function]}
          >
            Primary Definition
          </a>
        </li>
        <li
          className="nav-item outside-btn"
          key="0"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition0"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
        <li
          className="nav-item outside-btn"
          key="1"
        >
          <a
            className="nav-link subdefinition-link active"
            id="lnkEditSubDefinition1"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
      </ul>
      <button
        className="btn btn-light btn-sm float-right"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
         Add Subdefinition
      </button>
    </div>
    <div
      className="col-md-9 d-flex flex-column"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="flex-grow-1"
      >
        <ReduxForm
          destroyOnUnmount={true}
          enableReinitialize={true}
          forceUnregisterOnUnmount={false}
          form="reportDefinitionEditor"
          getFormState={[Function]}
          initialValues={
            Object {
              "displayName": "Planned Equipment Elements",
              "name": "planned_equipment",
              "query": "SELECT 
	e.object_id,
	ST_AsKml(geom) as kml_element,
	nt.name AS equipment_type,
	e.deployment_type
FROM  client.network_equipment e
JOIN client.network_node_types nt
	ON nt.id = e.node_type_id
WHERE root_plan_id = \${planId}
AND node_type_id != 8
AND e.is_branch_data
AND NOT(e.is_deleted)
",
              "queryType": "SQL_REPORT",
            }
          }
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldError={[Function]}
          shouldValidate={[Function]}
          shouldWarn={[Function]}
          submitAsSideEffect={false}
          touchOnBlur={true}
          touchOnChange={false}
          updateUnregisteredFields={false}
        />
      </div>
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          className="btn btn-light"
          id="btnSaveCurrentDefinition"
          onClick={[Function]}
        >
          Check Syntax
        </button>
        <button
          className="btn btn-primary"
          id="btnSaveReportToServer"
          onClick={[Function]}
        >
          Save Definition
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Click primary and subdefinitions to edit 4`] = `
<div
  className="container report-module-editor"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="col-md-3"
    >
      <label>
        Report Type
      </label>
      <select
        className="form-control mb-3"
        onChange={[Function]}
        value="GENERAL"
      >
        <option
          key="GENERAL"
          value="GENERAL"
        >
          General
        </option>
        <option
          key="COVERAGE"
          value="COVERAGE"
        >
          Coverage
        </option>
        <option
          key="FORM477"
          value="FORM477"
        >
          Form477
        </option>
        <option
          key="PARAM_QUERY"
          value="PARAM_QUERY"
        >
          Param Query
        </option>
      </select>
      <label>
        Report Definitions
      </label>
      <ul
        className="nav nav-pills mb-2 definitions-list"
      >
        <li
          className="nav-item"
          key="-1"
        >
          <a
            className="nav-link active"
            id="lnkEditPrimaryDefinition"
            onClick={[Function]}
          >
            Primary Definition
          </a>
        </li>
        <li
          className="nav-item outside-btn"
          key="0"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition0"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
        <li
          className="nav-item outside-btn"
          key="1"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition1"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
      </ul>
      <button
        className="btn btn-light btn-sm float-right"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
         Add Subdefinition
      </button>
    </div>
    <div
      className="col-md-9 d-flex flex-column"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="flex-grow-1"
      >
        <ReduxForm
          destroyOnUnmount={true}
          enableReinitialize={true}
          forceUnregisterOnUnmount={false}
          form="reportDefinitionEditor"
          getFormState={[Function]}
          initialValues={
            Object {
              "displayName": "plan_report",
              "name": "plan_report",
              "query": "<kml
    xmlns=\\"http://www.opengis.net/kml/2.2\\"
    xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\">
    <Document>
        <name>plan-\${planId}.kml</name>
        <visibility>0</visibility>
        <Style id=\\"style_construction_estimated\\">
            <LineStyle>
                <color>ff0000ff</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_ariel_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_buried_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_underground_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_obstacle_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_planned_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_undersea_estimated\\">
            <LineStyle>
                <color>ffb40014</color>
                <width>4</width>
            </LineStyle>
        </Style>

        <Style id=\\"equip_central_office\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_splice_point\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/blue-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_hub\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/itblu-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_bulk_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/purple-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_cell_5g\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_junction_splitter\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_dslam\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/ylw-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_loop_extender\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_network_anchor\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Folder>
            <name>Fiber</name>
            <visibility>0</visibility>
            <Folder>
                <name>Planned Fiber</name>
                <visibility>0</visibility>
                <#list planned_fibers as fiber>
                    <Placemark>
                        <name>\${fiber.type_name}</name>
                        <visibility>0</visibility>
                        <styleUrl>#fiber_\${fiber.type_code}</styleUrl>
                        \${fiber.kml_element}
                    </Placemark>
                </#list>
            </Folder>
         </Folder>   
        <Folder>
            <name>Equipment</name>
            <visibility>0</visibility>
            <Folder>
                <#list planned_equipment as equipment>
                    <Placemark>
                        <name>\${equipment.object_id}</name>
                        <visibility>0</visibility>
                        <styleUrl>#equip_\${equipment.equipment_type}</styleUrl>
                        \${equipment.kml_element}
                    </Placemark>
                </#list>
           </Folder>
        </Folder>
    </Document>

</kml>",
              "queryType": "KML_REPORT",
            }
          }
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldError={[Function]}
          shouldValidate={[Function]}
          shouldWarn={[Function]}
          submitAsSideEffect={false}
          touchOnBlur={true}
          touchOnChange={false}
          updateUnregisteredFields={false}
        />
      </div>
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          className="btn btn-light"
          id="btnSaveCurrentDefinition"
          onClick={[Function]}
        >
          Check Syntax
        </button>
        <button
          className="btn btn-primary"
          id="btnSaveReportToServer"
          onClick={[Function]}
        >
          Save Definition
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`With only report id 1`] = `
<div
  className="container report-module-editor"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="col-md-3"
    >
      <label>
        Report Type
      </label>
      <select
        className="form-control mb-3"
        onChange={[Function]}
      >
        <option
          key="GENERAL"
          value="GENERAL"
        >
          General
        </option>
        <option
          key="COVERAGE"
          value="COVERAGE"
        >
          Coverage
        </option>
        <option
          key="FORM477"
          value="FORM477"
        >
          Form477
        </option>
        <option
          key="PARAM_QUERY"
          value="PARAM_QUERY"
        >
          Param Query
        </option>
      </select>
      <label>
        Report Definitions
      </label>
      <ul
        className="nav nav-pills mb-2 definitions-list"
      >
        <li
          className="nav-item"
          key="-1"
        >
          <a
            className="nav-link active"
            id="lnkEditPrimaryDefinition"
            onClick={[Function]}
          >
            Primary Definition
          </a>
        </li>
      </ul>
      <button
        className="btn btn-light btn-sm float-right"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
         Add Subdefinition
      </button>
    </div>
    <div
      className="col-md-9 d-flex flex-column"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          className="btn btn-light"
          id="btnSaveCurrentDefinition"
          onClick={[Function]}
        >
          Check Syntax
        </button>
        <button
          className="btn btn-primary"
          id="btnSaveReportToServer"
          onClick={[Function]}
        >
          Save Definition
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`With populated report 1`] = `
<div
  className="container report-module-editor"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="col-md-3"
    >
      <label>
        Report Type
      </label>
      <select
        className="form-control mb-3"
        onChange={[Function]}
        value="GENERAL"
      >
        <option
          key="GENERAL"
          value="GENERAL"
        >
          General
        </option>
        <option
          key="COVERAGE"
          value="COVERAGE"
        >
          Coverage
        </option>
        <option
          key="FORM477"
          value="FORM477"
        >
          Form477
        </option>
        <option
          key="PARAM_QUERY"
          value="PARAM_QUERY"
        >
          Param Query
        </option>
      </select>
      <label>
        Report Definitions
      </label>
      <ul
        className="nav nav-pills mb-2 definitions-list"
      >
        <li
          className="nav-item"
          key="-1"
        >
          <a
            className="nav-link active"
            id="lnkEditPrimaryDefinition"
            onClick={[Function]}
          >
            Primary Definition
          </a>
        </li>
        <li
          className="nav-item outside-btn"
          key="0"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition0"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
        <li
          className="nav-item outside-btn"
          key="1"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition1"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
      </ul>
      <button
        className="btn btn-light btn-sm float-right"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
         Add Subdefinition
      </button>
    </div>
    <div
      className="col-md-9 d-flex flex-column"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="flex-grow-1"
      >
        <ReduxForm
          destroyOnUnmount={true}
          enableReinitialize={true}
          forceUnregisterOnUnmount={false}
          form="reportDefinitionEditor"
          getFormState={[Function]}
          initialValues={
            Object {
              "displayName": "plan_report",
              "name": "plan_report",
              "query": "<kml
    xmlns=\\"http://www.opengis.net/kml/2.2\\"
    xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\">
    <Document>
        <name>plan-\${planId}.kml</name>
        <visibility>0</visibility>
        <Style id=\\"style_construction_estimated\\">
            <LineStyle>
                <color>ff0000ff</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_ariel_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_buried_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_underground_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_obstacle_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_planned_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_undersea_estimated\\">
            <LineStyle>
                <color>ffb40014</color>
                <width>4</width>
            </LineStyle>
        </Style>

        <Style id=\\"equip_central_office\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_splice_point\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/blue-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_hub\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/itblu-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_bulk_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/purple-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_cell_5g\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_junction_splitter\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_dslam\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/ylw-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_loop_extender\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_network_anchor\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Folder>
            <name>Fiber</name>
            <visibility>0</visibility>
            <Folder>
                <name>Planned Fiber</name>
                <visibility>0</visibility>
                <#list planned_fibers as fiber>
                    <Placemark>
                        <name>\${fiber.type_name}</name>
                        <visibility>0</visibility>
                        <styleUrl>#fiber_\${fiber.type_code}</styleUrl>
                        \${fiber.kml_element}
                    </Placemark>
                </#list>
            </Folder>
         </Folder>   
        <Folder>
            <name>Equipment</name>
            <visibility>0</visibility>
            <Folder>
                <#list planned_equipment as equipment>
                    <Placemark>
                        <name>\${equipment.object_id}</name>
                        <visibility>0</visibility>
                        <styleUrl>#equip_\${equipment.equipment_type}</styleUrl>
                        \${equipment.kml_element}
                    </Placemark>
                </#list>
           </Folder>
        </Folder>
    </Document>

</kml>",
              "queryType": "KML_REPORT",
            }
          }
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldError={[Function]}
          shouldValidate={[Function]}
          shouldWarn={[Function]}
          submitAsSideEffect={false}
          touchOnBlur={true}
          touchOnChange={false}
          updateUnregisteredFields={false}
        />
      </div>
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          className="btn btn-light"
          id="btnSaveCurrentDefinition"
          onClick={[Function]}
        >
          Check Syntax
        </button>
        <button
          className="btn btn-primary"
          id="btnSaveReportToServer"
          onClick={[Function]}
        >
          Save Definition
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`With validation error message 1`] = `
<div
  className="container report-module-editor"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="col-md-3"
    >
      <label>
        Report Type
      </label>
      <select
        className="form-control mb-3"
        onChange={[Function]}
        value="GENERAL"
      >
        <option
          key="GENERAL"
          value="GENERAL"
        >
          General
        </option>
        <option
          key="COVERAGE"
          value="COVERAGE"
        >
          Coverage
        </option>
        <option
          key="FORM477"
          value="FORM477"
        >
          Form477
        </option>
        <option
          key="PARAM_QUERY"
          value="PARAM_QUERY"
        >
          Param Query
        </option>
      </select>
      <label>
        Report Definitions
      </label>
      <ul
        className="nav nav-pills mb-2 definitions-list"
      >
        <li
          className="nav-item"
          key="-1"
        >
          <a
            className="nav-link active"
            id="lnkEditPrimaryDefinition"
            onClick={[Function]}
          >
            Primary Definition
          </a>
        </li>
        <li
          className="nav-item outside-btn"
          key="0"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition0"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
        <li
          className="nav-item outside-btn"
          key="1"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition1"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
      </ul>
      <button
        className="btn btn-light btn-sm float-right"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
         Add Subdefinition
      </button>
    </div>
    <div
      className="col-md-9 d-flex flex-column"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="flex-grow-1"
      >
        <ReduxForm
          destroyOnUnmount={true}
          enableReinitialize={true}
          forceUnregisterOnUnmount={false}
          form="reportDefinitionEditor"
          getFormState={[Function]}
          initialValues={
            Object {
              "displayName": "plan_report",
              "name": "plan_report",
              "query": "<kml
    xmlns=\\"http://www.opengis.net/kml/2.2\\"
    xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\">
    <Document>
        <name>plan-\${planId}.kml</name>
        <visibility>0</visibility>
        <Style id=\\"style_construction_estimated\\">
            <LineStyle>
                <color>ff0000ff</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_ariel_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_buried_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_underground_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_obstacle_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_planned_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_undersea_estimated\\">
            <LineStyle>
                <color>ffb40014</color>
                <width>4</width>
            </LineStyle>
        </Style>

        <Style id=\\"equip_central_office\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_splice_point\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/blue-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_hub\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/itblu-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_bulk_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/purple-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_cell_5g\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_junction_splitter\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_dslam\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/ylw-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_loop_extender\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_network_anchor\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Folder>
            <name>Fiber</name>
            <visibility>0</visibility>
            <Folder>
                <name>Planned Fiber</name>
                <visibility>0</visibility>
                <#list planned_fibers as fiber>
                    <Placemark>
                        <name>\${fiber.type_name}</name>
                        <visibility>0</visibility>
                        <styleUrl>#fiber_\${fiber.type_code}</styleUrl>
                        \${fiber.kml_element}
                    </Placemark>
                </#list>
            </Folder>
         </Folder>   
        <Folder>
            <name>Equipment</name>
            <visibility>0</visibility>
            <Folder>
                <#list planned_equipment as equipment>
                    <Placemark>
                        <name>\${equipment.object_id}</name>
                        <visibility>0</visibility>
                        <styleUrl>#equip_\${equipment.equipment_type}</styleUrl>
                        \${equipment.kml_element}
                    </Placemark>
                </#list>
           </Folder>
        </Folder>
    </Document>

</kml>",
              "queryType": "KML_REPORT",
            }
          }
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldError={[Function]}
          shouldValidate={[Function]}
          shouldWarn={[Function]}
          submitAsSideEffect={false}
          touchOnBlur={true}
          touchOnChange={false}
          updateUnregisteredFields={false}
        />
      </div>
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="col"
        >
          <div
            className="alert alert-danger"
            role="alert"
            style={
              Object {
                "width": "100%",
              }
            }
          >
            Syntax error at SELECTA
          </div>
        </div>
      </div>
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          className="btn btn-light"
          id="btnSaveCurrentDefinition"
          onClick={[Function]}
        >
          Check Syntax
        </button>
        <button
          className="btn btn-primary"
          id="btnSaveReportToServer"
          onClick={[Function]}
        >
          Save Definition
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`With validation success message 1`] = `
<div
  className="container report-module-editor"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="row"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="col-md-3"
    >
      <label>
        Report Type
      </label>
      <select
        className="form-control mb-3"
        onChange={[Function]}
        value="GENERAL"
      >
        <option
          key="GENERAL"
          value="GENERAL"
        >
          General
        </option>
        <option
          key="COVERAGE"
          value="COVERAGE"
        >
          Coverage
        </option>
        <option
          key="FORM477"
          value="FORM477"
        >
          Form477
        </option>
        <option
          key="PARAM_QUERY"
          value="PARAM_QUERY"
        >
          Param Query
        </option>
      </select>
      <label>
        Report Definitions
      </label>
      <ul
        className="nav nav-pills mb-2 definitions-list"
      >
        <li
          className="nav-item"
          key="-1"
        >
          <a
            className="nav-link active"
            id="lnkEditPrimaryDefinition"
            onClick={[Function]}
          >
            Primary Definition
          </a>
        </li>
        <li
          className="nav-item outside-btn"
          key="0"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition0"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
        <li
          className="nav-item outside-btn"
          key="1"
        >
          <a
            className="nav-link subdefinition-link "
            id="lnkEditSubDefinition1"
            onClick={[Function]}
          >
            Subdefinition
          </a>
          <button
            className="btn btn-sm ml-1 subdefinition-delete-button"
            onClick={[Function]}
          >
            <i
              className="fas fa-trash-alt text-danger"
            />
          </button>
        </li>
      </ul>
      <button
        className="btn btn-light btn-sm float-right"
        onClick={[Function]}
      >
        <i
          className="fa fa-plus"
        />
         Add Subdefinition
      </button>
    </div>
    <div
      className="col-md-9 d-flex flex-column"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="flex-grow-1"
      >
        <ReduxForm
          destroyOnUnmount={true}
          enableReinitialize={true}
          forceUnregisterOnUnmount={false}
          form="reportDefinitionEditor"
          getFormState={[Function]}
          initialValues={
            Object {
              "displayName": "plan_report",
              "name": "plan_report",
              "query": "<kml
    xmlns=\\"http://www.opengis.net/kml/2.2\\"
    xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\">
    <Document>
        <name>plan-\${planId}.kml</name>
        <visibility>0</visibility>
        <Style id=\\"style_construction_estimated\\">
            <LineStyle>
                <color>ff0000ff</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_ariel_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_buried_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_underground_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_obstacle_estimated\\">
            <LineStyle>
                <color>50000000</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_planned_conduit_estimated\\">
            <LineStyle>
                <color>501400FA</color>
                <width>4</width>
            </LineStyle>
        </Style>
        <Style id=\\"fiber_undersea_estimated\\">
            <LineStyle>
                <color>ffb40014</color>
                <width>4</width>
            </LineStyle>
        </Style>

        <Style id=\\"equip_central_office\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_splice_point\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/blue-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_hub\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/itblu-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_fiber_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_bulk_distribution_terminal\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/purple-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_cell_5g\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/red-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_junction_splitter\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_dslam\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/ylw-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_loop_extender\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/pink-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Style id=\\"equip_network_anchor\\">
            <IconStyle>
                <color>ffffff00</color>
                <scale>1</scale>
                <Icon>
                    <href>http://maps.google.com/mapfiles/kml/pushpin/wht-pushpin.png</href>
                </Icon>
            </IconStyle>
        </Style>
        <Folder>
            <name>Fiber</name>
            <visibility>0</visibility>
            <Folder>
                <name>Planned Fiber</name>
                <visibility>0</visibility>
                <#list planned_fibers as fiber>
                    <Placemark>
                        <name>\${fiber.type_name}</name>
                        <visibility>0</visibility>
                        <styleUrl>#fiber_\${fiber.type_code}</styleUrl>
                        \${fiber.kml_element}
                    </Placemark>
                </#list>
            </Folder>
         </Folder>   
        <Folder>
            <name>Equipment</name>
            <visibility>0</visibility>
            <Folder>
                <#list planned_equipment as equipment>
                    <Placemark>
                        <name>\${equipment.object_id}</name>
                        <visibility>0</visibility>
                        <styleUrl>#equip_\${equipment.equipment_type}</styleUrl>
                        \${equipment.kml_element}
                    </Placemark>
                </#list>
           </Folder>
        </Folder>
    </Document>

</kml>",
              "queryType": "KML_REPORT",
            }
          }
          keepDirtyOnReinitialize={false}
          persistentSubmitErrors={false}
          pure={true}
          shouldAsyncValidate={[Function]}
          shouldError={[Function]}
          shouldValidate={[Function]}
          shouldWarn={[Function]}
          submitAsSideEffect={false}
          touchOnBlur={true}
          touchOnChange={false}
          updateUnregisteredFields={false}
        />
      </div>
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <div
          className="col"
        >
          <div
            className="alert alert-success"
            role="alert"
            style={
              Object {
                "width": "100%",
              }
            }
          >
            The report definition was successfully validated without any errors.
          </div>
        </div>
      </div>
      <div
        className="form-row flex-grow-0"
        style={
          Object {
            "justifyContent": "flex-end",
          }
        }
      >
        <button
          className="btn btn-light"
          id="btnSaveCurrentDefinition"
          onClick={[Function]}
        >
          Check Syntax
        </button>
        <button
          className="btn btn-primary"
          id="btnSaveReportToServer"
          onClick={[Function]}
        >
          Save Definition
        </button>
      </div>
    </div>
  </div>
</div>
`;
